--- a/config/.env
+++ b/config/.env
@@ -1,2 +1,2 @@
 PORT = 2121
-DB_STRING = mongodb+srv://carpeomnia777:Hokusai777@cluster0.mju1s.mongodb.net/?retryWrites=true&w=majority
+DB_STRING = mongodb+srv://shoppers-united:Shoppersunited100@cluster0.z1s8xlh.mongodb.net/?retryWrites=true&w=majority
