--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-flash": "^0.0.2",
+    "express-handlebars": "^6.0.6",
     "express-session": "^1.17.1",
     "mongodb": "^3.6.5",
     "mongoose": "^5.12.3",
