quick change to server

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "todo-mvc-auth-local",
   "version": "1.0.0",
-  "description": "A Simple ToDo App is built using the MVC Architecture, we have also implemented \"authorization\" so folx can sign up, customize & personalize the app",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
@@ -31,10 +31,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/viktorCodes/Shoppers-United.git"
-  },
-  "bugs": {
-    "url": "https://github.com/viktorCodes/Shoppers-United/issues"
-  },
-  "homepage": "https://github.com/viktorCodes/Shoppers-United#readme"
+    "url": ""
+  }
 }
