adding basic features to app settings

--- a/config/.env
+++ b/config/.env
@@ -1,2 +1,8 @@
 PORT = 2120
 DB_STRING = mongodb+srv://shoppers-united:Shoppersunited100@cluster0.z1s8xlh.mongodb.net/?retryWrites=true&w=majority
+
+#To receive realtime notifications....using Pusher (have to make an account and register)
+    # PUSHER_APP_ID = YOUR_APP_ID
+    # PUSHER_APP_KEY = YOUR_APP_KEY
+    # PUSHER_APP_SECRET = YOUR_APP_SECRET
+    # PUSHER_APP_CLUSTER = YOUR_APP_CLUSTER
